# pyAnalysis

./: README.md  abc_test.py  analysis.py  code_errors.py  conftest.py  filemanager.py  models.py  pyproject.toml  validators.py
tests/: test_analysis.py  test_filemanager.py  tets_filemanager.py
tests/data/: abc_test.xlsx  category.xlsx  data_test.xlsx  duplicate_values.xlsx  empty_exel.xlsx  empty_value.xlsx  negative_value.xlsx  not_numeric.xlsx  value_in_accumulated_share.xlsx  value_in_share.xlsx
