[tool.poetry]
name = "pyAnalysis"
version = "0.1.0"
description = ""
authors = ["pandamy619 <vladislavtagaev@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pathlib = "^1.0.1"
pandas = "^1.4.4"
openpyxl = "^3.0.10"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
